tests/baselines/reference/parserArrowFunctionExpression2.errors.txt
==== tests/cases/conformance/parser/ecmascript5/ArrowFunctionExpressions/parserArrowFunctionExpression2.ts (3 errors) ====
    a = () => { } || a
                  ~~
!!! error TS1005: ';' expected.
    ~
!!! error TS2304: Cannot find name 'a'.
                     ~
!!! error TS2304: Cannot find name 'a'.